[package]
name = "rustkern"
version = "0.1.0"
edition = "2021"
authors = ["Ashton Hunt <ashkernel02@gmail.com>"]

[dependencies]
bootloader = "0.9.8"
spin = "0.9.8"
volatile = "0.2.6"

# eh_personality language item is no longer required with this panic behavior
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]  # lazily evaluated statics, i.e. not at compile time
version = "1.5.0"
features = ["spin_no_std"]  # not linking with standard lib

