[package]
name = "rustkern"
version = "0.1.0"
edition = "2021"
authors = ["Ashton Hunt <ashkernel02@gmail.com>"]

[dependencies]
bootloader = "0.9.8"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.15.1"

# eh_personality language item is no longer required with this panic behavior
[profile.release]
panic = "abort"

[dependencies.lazy_static]  # lazily evaluated statics, i.e. not at compile time
version = "1.5.0"
features = ["spin_no_std"]  # not linking with standard lib

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300  # 300 seconds, or 5 minutes
                    # tests can fail for a number of reasons, namely:
                    # bootloader failing to load the kernel, booting endlessly
                    # BIOS/UEFI failing to load the bootloader, booting endlessly
                    # loop {} statement at some function
                    # hardware causes a system reset, e.g. when CPU exception not caught

test-success-exit-code = 33 # maps 0x10 to exit code 0

